Custom--app/main/default/objects/Eviction__c/Eviction__c.object-meta.xml
<CustomObject>
    <description>This object is used to track key dates and details relating to the eviction process.</description>
    <label>Eviction</label>
    <nameField>
        <displayFormat>Evict-{0000}</displayFormat>
        <label>Eviction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evictions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>