Custom--app/main/default/objects/Eviction__c/fields/Constable_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Constable_Lock_Date__c</fullName>
    <label>Constable Lock Date</label>
    <type>Date</type>
</CustomField>