Custom--app/main/default/objects/Eviction__c/fields/Days_to_Complete_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete_Eviction__c</fullName>
    <formula>Eviction_Complete_Date__c - Initial_Notice_Date__c</formula>
    <label># Days to Complete Eviction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>