Custom--app/main/default/objects/Eviction__c/fields/Days_to_End_of_Statutary_Notice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_End_of_Statutary_Notice__c</fullName>
    <formula>Statutory_Notice_Period_Days__c  - (TODAY()- Initial_Notice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to End of Statutary Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>