Custom--app/main/default/objects/Eviction__c/fields/Dispo_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispo_Filed_Date__c</fullName>
    <label>Dispo Filed Date</label>
    <type>Date</type>
</CustomField>