Custom--app/main/default/objects/Eviction__c/fields/Eviction_Attorney_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Attorney_Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eviction Attorney Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Evictions Handled by this Firm</relationshipLabel>
    <relationshipName>Evictions</relationshipName>
    <type>Lookup</type>
</CustomField>