Custom--app/main/default/objects/Eviction__c/fields/Eviction_Attorney_Ref_ID__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Attorney_Ref_ID__c</fullName>
    <label>Eviction Attorney Ref ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>