Custom--app/main/default/objects/Eviction__c/fields/Eviction_Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Court_Date__c</fullName>
    <label>Eviction Court/Judgement Date</label>
    <type>Date</type>
</CustomField>