Custom--app/main/default/objects/Eviction__c/fields/Eviction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Notes__c</fullName>
    <label>Eviction Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>