Custom--app/main/default/objects/Eviction__c/fields/Eviction_Status__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Status__c</fullName>
    <label>Eviction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>