Custom--app/main/default/objects/Eviction__c/fields/Eviction_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Trial_Date__c</fullName>
    <label>Eviction Trial Date</label>
    <type>Date</type>
</CustomField>