Custom--app/main/default/objects/Eviction__c/fields/Eviction_Type__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Type__c</fullName>
    <label>Eviction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIP</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>