Custom--app/main/default/objects/Eviction__c/fields/Eviction_Writ_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Writ_Sign_Date__c</fullName>
    <label>Eviction Writ Sign Date</label>
    <type>Date</type>
</CustomField>