Custom--app/main/default/objects/Eviction__c/fields/Initial_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notice_Date__c</fullName>
    <label>Initial Notice Date</label>
    <type>Date</type>
</CustomField>