Custom--app/main/default/objects/Eviction__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease (if applicable)</label>
    <referenceTo>Tenant_Card__c</referenceTo>
    <relationshipLabel>Eviction</relationshipLabel>
    <relationshipName>Eviction</relationshipName>
    <type>Lookup</type>
</CustomField>