Custom--app/main/default/objects/Eviction__c/fields/LegacyId__c.field-meta.xml
<CustomField>
    <fullName>LegacyId__c</fullName>
    <label>LegacyId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>