Custom--app/main/default/objects/Eviction__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>