Custom--app/main/default/objects/Eviction__c/fields/No_Outside_Counsel__c.field-meta.xml
<CustomField>
    <fullName>No_Outside_Counsel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this matter is being handled exclusively by our internal legal team, please indicate here.</inlineHelpText>
    <label>No Outside Counsel</label>
    <type>Checkbox</type>
</CustomField>