Custom--app/main/default/objects/Eviction__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <formula>Portfolio__r.Owner:User.Full_Name__c</formula>
    <label>PM</label>
    <type>Text</type>
</CustomField>