Custom--app/main/default/objects/Eviction__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Evictions</relationshipLabel>
    <relationshipName>Evictions</relationshipName>
    <type>Lookup</type>
</CustomField>