Custom--app/main/default/objects/Eviction__c/fields/Refer_to_Attorney_Date__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Attorney_Date__c</fullName>
    <label>Refer to Attorney Date</label>
    <type>Date</type>
</CustomField>