Custom--app/main/default/objects/Eviction__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>TIP_Record__r.Portfolio__r.Residence__r.Address_Street__c</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>