Custom--app/main/default/objects/Eviction__c/fields/TIP_Record__c.field-meta.xml
<CustomField>
    <fullName>TIP_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIP (if applicable)</label>
    <referenceTo>TIP_Tracking__c</referenceTo>
    <relationshipLabel>Eviction</relationshipLabel>
    <relationshipName>Eviction</relationshipName>
    <type>Lookup</type>
</CustomField>