Custom--app/main/default/objects/Eviction__c/fields/X5_Day_Notice__c.field-meta.xml
<CustomField>
    <fullName>X5_Day_Notice__c</fullName>
    <label>5 Day Notice</label>
    <type>Date</type>
</CustomField>