Custom--app/main/default/objects/Eviction__c/fields/X60_Day_Notice__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Notice__c</fullName>
    <label>60 Day Notice</label>
    <type>Date</type>
</CustomField>