Custom--app/main/default/objects/Eviction__c/fields/X90_Day_Notice__c.field-meta.xml
<CustomField>
    <fullName>X90_Day_Notice__c</fullName>
    <label>90 Day Notice</label>
    <type>Date</type>
</CustomField>