Custom--app/main/default/objects/Eviction__c/validationRules/Resident_Eviction_Portfolio_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resident_Eviction_Portfolio_Required</fullName>
    <active>true</active>
    <description>for resident eviction, a portfolio is required.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Eviction_Type__c, "Resident"),
ISBLANK(Portfolio__c)
)</errorConditionFormula>
    <errorDisplayField>Eviction_Type__c</errorDisplayField>
    <errorMessage>For Resident Evictions, please update record with Portfolio.</errorMessage>
</ValidationRule>