Custom--app/main/default/objects/Eviction__c/listViews/All_Evictions_missing_Regions.listView-meta.xml
<ListView>
    <fullName>All_Evictions_missing_Regions</fullName>
    <columns>NAME</columns>
    <columns>TIP_Record__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Region__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Eviction_Type__c</columns>
    <columns>Eviction_Status__c</columns>
    <columns>Eviction_Attorney_Law_Firm__c</columns>
    <columns>Refer_to_Attorney_Date__c</columns>
    <columns>Eviction_Court_Date__c</columns>
    <columns>Constable_Lock_Date__c</columns>
    <columns>Eviction_Complete_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Evictions missing Regions</label>
</ListView>