Custom--app/main/default/objects/Eviction__c/listViews/All_Open_Evictions_Seattle.listView-meta.xml
<ListView>
    <fullName>All_Open_Evictions_Seattle</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Code__c</columns>
    <columns>Property_Code__c</columns>
    <columns>PM__c</columns>
    <columns>Lease__c</columns>
    <columns>TIP_Record__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Eviction_Type__c</columns>
    <columns>Eviction_Status__c</columns>
    <columns>Eviction_Notes__c</columns>
    <columns>Refer_to_Attorney_Date__c</columns>
    <columns>Eviction_Court_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eviction_Type__c</field>
        <operation>equals</operation>
        <value>Resident,TIP</value>
    </filters>
    <filters>
        <field>Eviction_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>All Open Evictions - Seattle</label>
    <sharedTo>
        <role>Executive_Seattle</role>
        <role>Team_Member_Seattle</role>
        <role>X3rd_Party_Seattle</role>
    </sharedTo>
</ListView>