Custom--app/main/default/objects/Eviction__c/listViews/All_Open_Resident_Evictions_Miami.listView-meta.xml
<ListView>
    <fullName>All_Open_Resident_Evictions_Miami</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Lease__c</columns>
    <columns>Eviction_Type__c</columns>
    <columns>Eviction_Status__c</columns>
    <columns>Eviction_Attorney_Law_Firm__c</columns>
    <columns>Refer_to_Attorney_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Days_to_Complete_Eviction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eviction_Type__c</field>
        <operation>equals</operation>
        <value>Resident</value>
    </filters>
    <filters>
        <field>Eviction_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>miami</value>
    </filters>
    <label>All Open Resident Evictions - Miami</label>
</ListView>