Custom--app/main/default/objects/Eviction__c/listViews/All_Open_TIP_Evictions.listView-meta.xml
<ListView>
    <fullName>All_Open_TIP_Evictions</fullName>
    <columns>NAME</columns>
    <columns>TIP_Record__c</columns>
    <columns>Portfolio__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Eviction_Status__c</columns>
    <columns>Refer_to_Attorney_Date__c</columns>
    <columns>Eviction_Trial_Date__c</columns>
    <columns>Eviction_Writ_Sign_Date__c</columns>
    <columns>No_Outside_Counsel__c</columns>
    <columns>Eviction_Attorney_Law_Firm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eviction_Type__c</field>
        <operation>equals</operation>
        <value>TIP</value>
    </filters>
    <filters>
        <field>Eviction_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>All Open TIP Evictions</label>
</ListView>