Custom--app/main/default/objects/Eviction__c/listViews/Status_Cancelled.listView-meta.xml
<ListView>
    <fullName>Status_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Code__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Eviction_Type__c</columns>
    <columns>TIP_Record__c</columns>
    <columns>Lease__c</columns>
    <columns>Eviction_Writ_Sign_Date__c</columns>
    <columns>Constable_Lock_Date__c</columns>
    <columns>Eviction_Court_Date__c</columns>
    <columns>Eviction_Status__c</columns>
    <columns>Eviction_Attorney_Law_Firm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eviction_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Status: Cancelled</label>
</ListView>